[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/CourseDirectory.gd" type="Script" id=1]
[ext_resource path="res://Assets/Branding/RDP_Class_cover_small.png" type="Texture" id=2]
[ext_resource path="res://Assets/Branding/RegM_Class_cover_small.png" type="Texture" id=3]
[ext_resource path="res://Assets/Styles/Purple.EditorTheme.tres" type="Theme" id=4]
[ext_resource path="res://Assets/Branding/EoI_Class_Cover.png" type="Texture" id=5]

[node name="Panel" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="HBox" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -452.0
margin_top = -80.5
margin_right = 452.0
margin_bottom = 80.5
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="RDP_Btn" type="Button" parent="HBox"]
margin_right = 276.0
margin_bottom = 161.0
rect_min_size = Vector2( 255, 150 )
size_flags_horizontal = 3
size_flags_vertical = 7
theme = ExtResource( 4 )
icon = ExtResource( 2 )
icon_align = 1
expand_icon = true

[node name="VSeparator" type="VSeparator" parent="HBox"]
margin_left = 280.0
margin_right = 310.0
margin_bottom = 161.0
theme = ExtResource( 4 )
custom_constants/separation = 30

[node name="RegM_Btn" type="Button" parent="HBox"]
margin_left = 314.0
margin_right = 590.0
margin_bottom = 161.0
rect_min_size = Vector2( 255, 150 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 4 )
icon = ExtResource( 3 )
icon_align = 1
expand_icon = true

[node name="VSeparator2" type="VSeparator" parent="HBox"]
margin_left = 594.0
margin_right = 624.0
margin_bottom = 161.0
theme = ExtResource( 4 )
custom_constants/separation = 30

[node name="EoI_Btn" type="Button" parent="HBox"]
margin_left = 628.0
margin_right = 904.0
margin_bottom = 161.0
rect_min_size = Vector2( 255, 150 )
size_flags_horizontal = 3
size_flags_vertical = 7
theme = ExtResource( 4 )
icon = ExtResource( 5 )
icon_align = 1
expand_icon = true
